--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, facilis neque. Cum similique tempora debitis, nulla earum vel, omnis vitae alias placeat sit assumenda itaque? Dolores exercitationem repellendus totam ullam!
     </p>
+    <article class="linda">
+        <p>
+            conflict
+        </p>
+    </article>
 </body>
 </html>
