--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Test Git</title>
 </head>
 <body>
-    <p>
+    <p >
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, facilis neque. Cum similique tempora debitis, nulla earum vel, omnis vitae alias placeat sit assumenda itaque? Dolores exercitationem repellendus totam ullam!
     </p>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nam amet est doloremque animi illo porro ab dolor accusantium voluptatum voluptatibus sunt, incidunt nemo assumenda aspernatur in alias? Iusto, nulla?
+        <span>test conflict</span>
 
     </p>
     <p>
