--- a/index.html
+++ b/index.html
@@ -10,21 +10,17 @@
     <p >
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, facilis neque. Cum similique tempora debitis, nulla earum vel, omnis vitae alias placeat sit assumenda itaque? Dolores exercitationem repellendus totam ullam!
     </p>
-<<<<<<< HEAD
     <article class="linda">
         <p>
             conflict
         </p>
     </article>
-=======
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nam amet est doloremque animi illo porro ab dolor accusantium voluptatum voluptatibus sunt, incidunt nemo assumenda aspernatur in alias? Iusto, nulla?
-        <span>test conflict</span>
-
-    </p>
-    <p>
-        test 
-    </p>
->>>>>>> dc00c5194f32d133f43a05e5ed7aab74f93e82a6
+    <nav>
+        <ol>
+            <li>
+                <a href="#">number</a>
+            </li>
+        </ol>
+    </nav>
 </body>
 </html>
