--- a/index.html
+++ b/index.html
@@ -22,5 +22,15 @@
             </li>
         </ol>
     </nav>
+    <section>
+        <div>
+            <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate porro magni officiis, dolore quas amet. Laboriosam ut nostrum molestias reprehenderit commodi nemo ipsam provident porro, quisquam, itaque distinctio sequi exercitationem.
+            </span>
+            <p class="class-02">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolor in optio illum ab! Eius dolorum vero reprehenderit in aperiam hic, blanditiis alias labore repudiandae ipsum perspiciatis enim architecto ipsa.
+            </p>
+        </div>
+    </section>
 </body>
 </html>
